--- a/answer_keys/Exam2practice_key.Rmd
+++ b/answer_keys/Exam2practice_key.Rmd
@@ -5,6 +5,12 @@ date: "`r Sys.Date()`"
 output: pdf_document
 ---
 
+```{r}
+library(tidyverse)
+library(moments)
+library(DescTools)
+```
+
 Please complete the following problems as practice for Exam 2. *Note* that you may need to load specific packages from the previous exercises to get your code to work.
 
 **All questions must be answered in full sentences**.
@@ -58,11 +64,9 @@ minnow.length <- c(89.58,75.44,86.86,74.71,69.70,
                    57.57,70.54,78.65,65.39,65.57)
 ```
 
-
 1.  State the null and alternative hypotheses for this study.
 
-$H_0$: The mean length of minnows in the Kearney Canal is not smaller than the mean length of other minnow populations.
-$H_A$: The mean length of minnows in the Kearney Canal is less than the length of other minnow populations.
+$H_0$: The mean length of minnows in the Kearney Canal is not smaller than the mean length of other minnow populations. $H_A$: The mean length of minnows in the Kearney Canal is less than the length of other minnow populations.
 
 2.  Calculate the first quartile, median, third quartile, and interquartile range of your response variable. Create a boxplot. Based on your results, are there any outliers in your data? Explain.
 
@@ -93,24 +97,24 @@ zscore <- function(xbar, mu, sd.x, n = 1){
 ```
 
 ```{r}
-Z <- zscore(xbar = 85, mu = mean(minnow.length),
-       sd.x = sd(minnow.length), n = length(minnow.length))
+Z <- zscore(xbar = mean(minnow.length), mu = 85,
+       sd.x = 4.50, n = length(minnow.length))
 Z |> round(2)
 ```
 
-The $Z$ score is 2.04.
+The $Z$ score is -6.37.
 
 4.  What is the probability that, by random chance alone, you would find your observed mean or something more extreme?
 
 ```{r}
-pnorm(Z, lower.tail = F)
+pnorm(Z)
 ```
 
-The $p$ value is 0.02.
+The $p$ value is \< 0.0001.
 
 5.  Assume that you set your $\alpha$ for your study prior to your data collection to 0.05. Based on this information and the $p$ value you obtained, is your null hypothesis supported or rejected? Report your conclusion in a full sentence, including the $Z$ score and the $p$ value in your answer.
 
-The mean length of minnows in the Kearney Canal is less than the mean length of published minnow populations ($Z = 2.04$, $p = 0.02$).
+The mean length of minnows in the Kearney Canal is less than the mean length of published minnow populations ($Z = 6.37$, $p < 0.0001$).
 
 ## Time spent on canvas
 
@@ -135,5 +139,70 @@ head(time_on_canvas)
 
 1.  Which variable is the response variable? What type of data are these?
 2.  Is the response variable normally distributed? Support your answer with a histogram, a cumulative frequency plot, assessments of skewness and kurtosis, and an indication of if outliers exist. Change the title and axes labels of the plots to make them intelligible.
-3.  If a transformation is needed, which transformation is required? *Note* - you only have to do a histogram and a `shapiro.test` to assess a transformation. As soon as you find a transformation that works, you do not have to do another.
-4.  What is the 95% confidence interval for the mean of these data? Report as the mean +/- the confidence interval, and answer in a full sentence. Don't forget to mention the units of your answer. HINT: you may have to back-transform your data.
+
+```{r}
+hist(time.hrs, main = "Time (hrs)", xlab = "Hours")
+```
+
+```{r}
+plot(ecdf(time.hrs), main = "Cumulative summary (time in hours)",
+     xlab = "Hours")
+```
+
+```{r}
+boxplot(time.hrs, ylab = "Time (hrs)")
+```
+
+Shapiro-Wilkes test:
+
+```{r}
+shapiro.test(time.hrs)
+```
+
+Kurtosis:
+
+```{r}
+(kurtosis(time.hrs)-3) |> round(2)
+```
+
+Skewness:
+
+```{r}
+skewness(time.hrs) |> round(2)
+```
+
+Outliers:
+
+```{r}
+Outlier(time.hrs)
+```
+
+The data are not normal.
+
+1.  If a transformation is needed, which transformation is required? *Note* - you only have to do a histogram and a `shapiro.test` to assess a transformation. As soon as you find a transformation that works, you do not have to do another.
+
+**Transformation**:
+
+```{r}
+log.hrs <- log1p(time.hrs)
+
+hist(log.hrs, xlab = "Hours (log transformed)", main = "Histogram of Log of Hours")
+```
+
+```{r}
+plot(ecdf(log.hrs), main = "Cumulative Frequency of Time in Hours", xlab = "Log of Hours")
+```
+
+```{r}
+shapiro.test(log.hrs)
+```
+
+A log transformation successfully makes the data normal.
+
+1.  What is the 95% confidence interval for the mean of these data? Report as the mean +/- the confidence interval, and answer in a full sentence. Don't forget to mention the units of your answer. HINT: you may have to back-transform your data.
+
+```{r}
+ci.log <- qnorm(0.975)*(sd(log.hrs)/sqrt(length(log.hrs)))
+
+ci <- expm1(ci.log)
+```
