--- a/ttest.qmd
+++ b/ttest.qmd
@@ -305,6 +305,8 @@ quiz_scores <- c(75, 82, 68, 90, 73, 85, 77, 79, 88, 91, 83, 80)
 
 -   Did the students do better or worse than expected, if there is a difference? (2 pts)
 
+-   If applicable, repeat the above steps for a *one-tailed test*. How does a one-tailed test change the results?
+
 ### **Question 2:**
 
 The following is a list of reported study hours for Biostats per week. We expect the class average to be about three hours a week. Using this dataset, answer the following questions:
@@ -322,6 +324,8 @@ study_hours <- c(0.5, 3.0, 2.5, 4.5, 3.0, 1.5, 2.0, 3.5, 6, 1.0)
 
 -   Do students spend more or less time studying per week, if there is a difference? (2 pts)
 
+-   If applicable, perform the above as a *one-tailed test* to see if students study *less* than expected. How does this change the results?
+
 ### **Question 3:**
 
 The following dataset records the reaction times of people who have had less than three hours of sleep on the night before this test. Using the reaction time column, perform a $t$-test to determine if these people have a statistically different reaction time than the human average (250 ms).
@@ -337,6 +341,8 @@ reaction_times <- sleepstudy$Reaction
 -   Is the mean score significantly different from the expected result? (2 pts)
 
 -   Are the people in the dataset slower or faster than average, if there is a difference? What might be the reason for this? (2 pts)
+
+-   If applicable, perform the above as a *one-tailed test* to see if reactions times are *faster* than expected. How does this change the results?
 
 ### **Question 4:**
 
@@ -356,6 +362,8 @@ milk_fats
 
 -   Is the milk fattier or leaner than expected, if there is a difference? (2 pts)
 
+-   If applicable, perform the above as a *one-tailed test* to see if fat content is *lower* than expected. How does this change the results?
+
 ### **Question 5:**
 
 Galaxies are rapidly moving away from us at various speeds. Previous studies had offered an average recession rate of 20,000 km/s. Data collected using redshift allows us to calculate the actual speed of recession of a galaxy. Using the data from R. J. Roeder (1990), saved as "galaxies", determine if the average galaxy is actually receding at the previously estimated rate.
@@ -370,6 +378,26 @@ head(galaxies)
 
 -   Are the galaxies moving away faster or slower, if there is a difference? (2 pts)
 
-    ## Homework: Chapter 10
+-   If applicable, perform the above as a *one-tailed test* that you feel is most appropriate. Compare these results to your previous results.
 
-#### Two-sample means are practiced in Chapter 10. Please see *Canvas* for more information.
+## Homework: Two-sample means testing
+
+### Question 1: Tail wagging
+
+The speed at which dogs wag their tail is often considered to be a proxy for how happy the dogs are, and they note that dogs seem happiest when they see their owners. Researchers gathered ten dogs and measured the rate of their tail wags per second (1) when they were told their owners name vs. (2) when they saw their owner approaching. They obtained the following dataset:
+
+```{r}
+owner_name <- c(2.0,1.3,3.4,2.6,2.6,0.8,2.6,1.9,0.3,0.9)
+owner_sight <- c(2.8,4.3,3.0,3.9,2.7,3.4,3.3,3.7,2.8,3.4)
+
+dog_data <- cbind(owner_name, owner_sight) |> 
+  as.data.frame()
+```
+
+-   What is the goal of this study?
+
+-   What are the null and alternative hypotheses for this study? Make sure your hypotheses reflect whether this is a one-tailed or a two-tailed test, whichever is most appropriate for the situation. *You will not be reminded about tails on future questions*.
+
+-   Perform the appropriate test for this dataset. Don't forget to check for normality and do the other necessary steps; *you will not be reminded to do this on future questions*.
+
+-   State your conclusion for this study.
